--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.2",
+    "create-components-react": "^2.1.4",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
@@ -15,7 +18,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "gp": "git add .&&git commit -m 'commit'&&git push"
+    "gp": "git add .&&git commit -m 'commit'&&git push",
+    "gc": "echo $npm_config_first"
   },
   "eslintConfig": {
     "extends": "react-app"
