--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
-    "create-components-react": "^2.1.4",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -18,8 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "gp": "git add .&&git commit -m 'commit'&&git push",
-    "gc": "echo $npm_config_first"
+    "gp": "git add .&&git commit -m 'commit'&&git push"
   },
   "eslintConfig": {
     "extends": "react-app"
